kubernets/ingress.yml
---
apiVersion: v1
kind: Service
metadata:
  name: hostnames
spec:
  externalTrafficPolicy: Cluster
  type: NodePort
  ports:
  - protocol: TCP
    port: 8082
    targetPort: 80
  selector:
    app: hostnames
status:
  loadBalancer: {}
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hostnames
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: web.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hostnames
          servicePort: 8082
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: prometheus
  name: grafana
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: grafana.k8s
    http:
      paths:
      - path: /
        backend:
          serviceName: kind-clownfish-grafana
          servicePort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: prometheus
  name: prometheus
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: prometheus.k8s
    http:
      paths:
      - path: /
        backend:
          serviceName: kind-clownfish-prometheus-prometheus
          servicePort: 9090
---
